@@ -1,0 +1,18 @@
+plugin.tx_egovapi {
+		# customsubcategory=api=LLL:EXT:egovapi/Resources/Private/Language/locallang_db.xml:constants.subcategories.api; cat=plugin.tx_egovapi/api; type=options[LLL:EXT:egovapi/Resources/Private/Language/locallang_db.xml:constants.wsdlVersion.inherit=,LLL:EXT:egovapi/Resources/Private/Language/locallang_db.xml:constants.wsdlVersion.oneZero=1.0,LLL:EXT:egovapi/Resources/Private/Language/locallang_db.xml:constants.wsdlVersion.twoZero=2.0]; label=LLL:EXT:egovapi/Resources/Private/Language/locallang_db.xml:constants.wsdlVersion
+	wsdlVersion =
+
+		# cat=plugin.tx_egovapi/enable; type=boolean; label=LLL:EXT:egovapi/Resources/Private/Language/locallang_db.xml:constants.enableDebug
+	enableDebug =
+
+	data {
+			# cat=plugin.tx_egovapi/file; type=string; label=LLL:EXT:egovapi/Resources/Private/Language/locallang_db.xml:constants.data.communities
+		communities = EXT:egovapi/Resources/Private/Data/communities.csv
+
+			# cat=plugin.tx_egovapi/file; type=string; label=LLL:EXT:egovapi/Resources/Private/Language/locallang_db.xml:constants.data.organizations
+		organizations = EXT:egovapi/Resources/Private/Data/organizations_geo.csv
+	}
+}
+
+### SVN id ###
+# $Id$
