@@ -333,11 +333,17 @@
 			<trans-unit id="common_ok">
 				<source>OK</source>
 			</trans-unit>
+			<trans-unit id="common_next">
+				<source>Next</source>
+			</trans-unit>
 			<trans-unit id="common_phone">
 				<source>Phone:</source>
 			</trans-unit>
 			<trans-unit id="common_fax">
 				<source>Fax:</source>
+			</trans-unit>
+			<trans-unit id="common_website">
+				<source>Website</source>
 			</trans-unit>
 			<trans-unit id="action_back_to_list">
 				<source>Back to list</source>
