@@ -1,3 +1,7 @@
+2012-04-04  Xavier Perseguers  <xavier@causal.ch>
+
+	* [TASK] Add skeleton of RDF generator wizard
+
 2012-03-21  Xavier Perseguers  <xavier@causal.ch>
 
 	* [TASK] Kickstart the RDF generator
